--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </head>
     <body background = "img//intro.png" onmousemove ="move(event);" onclick="mousec(event);"
         onkeydown="press(event);" onkeyup="release(event);">
+        
+        <audio id="musicPlayer" preload autoplay controls>
+            <source id="player-source" src="music//intro.mp3" type="audio/mpeg"/>        
+        </audio>
         <div id="game">
             <canvas id="myCanvas"> </canvas>
         </div>
@@ -25,7 +29,7 @@
         </fieldset>
         
         <div id="menu">
-            <h1> Web Bizuca - Connection</h1>
+            <h1> Web Bizuca - Connection Menu</h1>
             <div>
                 <p> IP Adress: <input type="text" id ="Tip" size="10"/>
                 Port: <input type="text" id ="Tport" size="5"/></p>
@@ -50,6 +54,7 @@
 
             <script type="text/javascript" src="js//input.js"> </script>
             <script type="text/javascript" src="js//game.js"> </script>
+            <script type="text/javascript" src="js//musica.js"> </script>
             <script type="text/javascript" src="js//connection.js"> </script>
             <script type="text/javascript" src="js//animation.js"> </script>
         </div>
